menu always visible, 100500 bugs fixed

--- a/static/styles.css
+++ b/static/styles.css
@@ -88,7 +88,7 @@ input[type="checkbox"] {
 }
 
 #menu-container {
-    display: none;
+    display: block;
     position: fixed;
     top: 0;
     left: 0;
